# FraudOps

./: .gitignore  README.md  fraud_detection_pipeline.yaml  generate_shap.py  main.py  pyproject.toml
.github/workflows/: ci-cd.yml
docker/inference/: app.py  inference.dockerfile
docker/training/: training.dockerfile
documents/: Final_Research_Report.md
monitoring/: alert_rules.yml  prometheus.yml  webhook.py
monitoring/dashboards/: data_drift.json  model_performance.json  system_health.json
pipeline/: fraud_pipeline.py  v1_pipeline.yaml
tests/: test_pipeline.py
